2016-06-24   1.2.1:
-------------------
  * compatibility with conda 4.1, see #26
  * include urls.txt in the pkgs, #27
  * skip machine type check in batch mode (Unix)


2016-04-07   1.2.0:
-------------------
  * ensure empty lists are handled correctly with selectors
  * add keep_pkgs option to construct.yaml


2016-03-24   1.1.0:
-------------------
  * add support for pre and post install scripts on Unix
  * fix issues related to non x86 platforms
  * add default_prefix support for Windows, see #7 and #14


2016-03-02   1.0.0:
-------------------
  * initial release